# olpc-utils

./: .gitignore  10-olpc-netif.rules  Makefile  Makefile.am  Makefile.build  Makefile.fedora  Makefile.in  Makefile.package  TODO  autogen.sh  become_root  configure.ac  cvs-import.sh  motd.olpc  olpc-bios-sig.c  olpc-clean-previews  olpc-configure  olpc-dm.c  olpc-evdev  olpc-netcapture  olpc-netlog  olpc-netstatus  olpc-pwr-prof  olpc-pwr-prof-send  olpc-pwr-prof.cron  olpc-session  olpc-utils.spec  olpc-utils.spec.in  setolpckeys.c  xorg-dcon-1.3.conf  xorg-dcon.conf  xorg-emu-1.3.conf  xorg-emu.conf  zzz_olpc.sh
etc/: motd.olpc
etc/ConsoleKit/run-session.d/: pam-console-compat.ck
etc/NetworkManager/dispatcher.d/: 22-log-connectivity
etc/X11/: xorg-dcon.conf  xorg-emu.conf  xorg-vmware.conf  xorg-xo1-dcon-extmon.conf  xorg-xo1.5-dcon-extmon.conf  xorg-xo1.5-dcon.conf
etc/X11/xinit/xinitrc.d/: 52-olpc-appstats.sh
etc/event.d/: ttyS0
etc/hal/fdi/information/: 30-keymap-olpc.fdi
etc/hal/fdi/policy/: x11-input.fdi
etc/init/: ttySx.conf
etc/modprobe.d/: olpc-psmouse.conf
etc/pam.d/: olpc-login
etc/profile.d/: zzz_olpc.sh
etc/rc.d/init.d/: diskspacecheck  diskspacerecover  olpc-configure
etc/skel/: .xsession-example
etc/skel/.config/autostart/: batterymon.desktop  imsettings-start.desktop
etc/udev/rules.d/: 10-olpc-mmp2rtc.rules  10-olpc-net.rules  10-olpc-sd.rules  20-olpc-rfkill.rules  30-olpc-wedo.rules
etc/xdg/autostart/: olpc-gnome-stats.desktop
lib/rules.d/: 96-olpckeymap.rules
lib/systemd/system/: getty@ttyS0.service  olpc-boot-finish.service  olpc-configure.service
lib/udev/: olpc_eth_namer  olpc_mouse_setup
lib/udev/rules.d/: 10-olpc-galcore.rules  10-olpc-mmp2rtc.rules  10-olpc-sd.rules  20-olpc-permissions.rules  70-olpc-mouse.rules  70-olpc-net.rules  70-olpc-udlfb.rules  96-olpckeymap.rules
src/: olpc-dm.c
usr/lib/pm-utils/sleep.d/: 00xo
usr/lib/systemd/system/: olpc-boot-finish.service  olpc-configure.service  olpc-dm.service  olpc-log-shutdown.service  plymouth-shutdown-wait.service
usr/lib/systemd/system-sleep/: olpc-xo.sh
usr/sbin/: olpc-boot-finish  olpc-configure  olpc-connectivity  olpc-dev-kernel  olpc-log-shutdown  olpc-logrotate
usr/share/X11/xorg.conf.d/: 20-olpc-mouse.conf
usr/share/glib-2.0/schemas/: olpc.gschema.override
usr/share/olpc-utils/: olpc-pwr-common  olpc-utils-functions
usr/share/olpc-utils/xorg.conf.d/: sisusb.conf  sisusbvga.conf  udlfb.conf  xo1.5.conf  xo1.75.conf  xo1.conf  xo4.conf
usr/share/sugar/extensions/cpsection/switchdesktop/: model.py
